# MultiomicsLM

./: .gitattributes  .gitignore  MultiomicsLM_pretraining.py  README.md  cli.py  ensemble.py  finetuning.py  models.py  pyproject.toml  setup.py
examples/: binary_labels_example.csv  date_labels_example.csv  metabolite_input_example.csv  protein_input_example.csv
src/multiomicslm/: __init__.py  cli.py  core.py  finetune.py
src/multiomicslm/assets/pretrained/: cluster_labels.npy  config.json  full_model_weights.pt  metabolite_columns.txt  metabolite_means.npy  metabolite_semantic_embeddings.npy  metabolite_stds.npy  protein_columns.txt  protein_means.npy  protein_semantic_embeddings.npy  protein_stds.npy
